new theme sosimple

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 ---
 theme :
-  name : sosimple
+  name : twitter
 ---
 {% include JB/setup %}
-{% include themes/sosimple/default.html %}
+{% include themes/twitter/default.html %}
