--- a/_includes/themes/sosimple/post.html
+++ b/_includes/themes/sosimple/post.html
@@ -7,7 +7,7 @@ layout: default
 </section>
 <section class="meta">
 <span class="author">
-  <a href="http://yihui.name">{{ site.author }}</a>
+  <a href="http://yijinjin.cn">{{ site.author }}</a>
 </span>
 <span class="time">
   /
