--- a/_includes/themes/sosimple/default.html
+++ b/_includes/themes/sosimple/default.html
@@ -18,14 +18,12 @@
         </header>
         <nav>
         <span><a title="home page" class="" href="{{ site.url }}/">home</a></span>
-        <span><a title="about" class="" href="{{ site.url }}/">about</a></span>
-        <span><a title="publication" class="" href="{{ site.url }}/publication/">publication</a></span>
-        <span><a title="guestbook" class="" href="{{ site.url }}/guestbook/">guestbook</a></span>
-        <span><a title="vitae" class="" href="{{ site.url }}/vitae/">vitae</a></span>
-        <span><a title="categories" class="" href="{{ site.url }}/categories/">categories</a></span>
-        <span><a title="tags" class="" href="{{ site.url }}/tags/">tags</a></span>
-        <span><a title="links" class="" href="{{ site.url }}/links/">links</a></span>
-        <span><a title="subscribe by RSS" class="" href="{{ site.url }}/feed/">subscribe</a></span>
+        <span><a title="about" class="" href="{{ site.url }}/About">about</a></span>
+        <span><a title="categories" class="" href="{{ site.url }}/Categories/">categories</a></span>
+        <span><a title="tags" class="" href="{{ site.url }}/Tags/">tags</a></span>
+        <span><a title="favorate books" class="" href="{{ site.url }}/Books/">tags</a></span>
+        <span><a title="links" class="" href="{{ site.url }}/Links/">links</a></span>
+        <span><a title="subscribe by RSS" class="" href="{{ site.url }}/Feed/">subscribe</a></span>
         </nav>
         <article class="content">
         {{ content }}
