--- a/_includes/themes/sosimple/default.html
+++ b/_includes/themes/sosimple/default.html
@@ -21,7 +21,7 @@
         <span><a title="about" class="" href="{{ site.url }}/About">about</a></span>
         <span><a title="categories" class="" href="{{ site.url }}/Categories/">categories</a></span>
         <span><a title="tags" class="" href="{{ site.url }}/Tags/">tags</a></span>
-        <span><a title="favorate books" class="" href="{{ site.url }}/Books/">Favorate Books</a></span>
+        <span><a title="favorate books" class="" href="{{ site.url }}/Books/">books</a></span>
         <span><a title="links" class="" href="{{ site.url }}/Links/">links</a></span>
         <span><a title="subscribe by RSS" class="" href="{{ site.url }}/Feed/">subscribe</a></span>
         </nav>
