--- a/_includes/themes/sosimple/post.html
+++ b/_includes/themes/sosimple/post.html
@@ -30,7 +30,7 @@
 </span>
 {% endif %}
 </section>
-{% include comments.md %}
+{% include comments.html %}
 <script type="text/javascript">
 $(function(){
   $(document).keydown(function(e) {
