--- a/_includes/themes/sosimple/comments.html
+++ b/_includes/themes/sosimple/comments.html
@@ -1,3 +1,4 @@
+<section class="comment">
 <!-- START: Livefyre Embed -->
 <div id="livefyre-comments"></div>
 <script type="text/javascript" src="http://zor.livefyre.com/wjs/v3.0/javascripts/livefyre.js"></script>
@@ -18,3 +19,4 @@
 }());
 </script>
 <!-- END: Livefyre Embed -->
+</section>
