--- a/assets/themes/sosimple/css/style.css
+++ b/assets/themes/sosimple/css/style.css
@@ -8,10 +8,11 @@
 * |/ | (~ (~
 * |\.|._)._)
 * --------------------------------- */
-
+/*
 @import url(./Galdeano.css);
 @import url(./Electrolize.css);
-@import url(./Cuprum.css);
+@import url(./Cuprum.css);*/
+
 body{font-size:14px;font-family:"Galdeano","Hiragino Sans GB","Microsoft YaHei",Trebuchet,"Trebuchet MS",Tahoma,"Lucida Grande","Lucida Sans Unicode",Verdana,sans-serif;color:#000000;background-color:#ffffff;}
 *{padding:0;margin: 0;border:none;outline:none;}
 a{color:#dd0000;text-decoration:none;}
