--- a/_includes/themes/sosimple/post.html
+++ b/_includes/themes/sosimple/post.html
@@ -21,7 +21,7 @@
       {% else %}
         <li class="prev disabled"><a>&larr; Previous</a></li>
       {% endif %}
-        <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Home</a></li>
+        <li><a href="{{ BASE_PATH }}{{ site.JB.home_path }}">Home</a></li>
       {% if page.next %}
         <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
       {% else %}
