--- a/_includes/themes/sosimple/default.html
+++ b/_includes/themes/sosimple/default.html
@@ -22,6 +22,7 @@
         <span><a title="categories" class="" href="{{ site.url }}/Categories/">categories</a></span>
         <span><a title="tags" class="" href="{{ site.url }}/Tags/">tags</a></span>
         <span><a title="favorate books" class="" href="{{ site.url }}/Books/">books</a></span>
+	<span><a title="resources" class="" href="{{ site.url }}/Resource/">resource</a></span>
         <span><a title="links" class="" href="{{ site.url }}/Links/">links</a></span>
         <span><a title="subscribe by RSS" class="" href="{{ site.url }}/Feed/">subscribe</a></span>
         </nav>
