--- a/assets/themes/sosimple/css/style.css
+++ b/assets/themes/sosimple/css/style.css
@@ -9,14 +9,14 @@
 * |\.|._)._)
 * --------------------------------- */
 
-/*@import url({{ ASSET_PATH }}/css/Galdeano.css);
-@import url({{ ASSET_PATH }}/css/Electrolize.css);
-@import url({{ ASSET_PATH }}/css/Cuprum.css);
-*/
+@import url(http://yijinjin.cn/fonts/Galdeano.css);
+@import url(http://yijinjin.cn/fonts/Electrolize.css);
+@import url(http://yijinjin.cn/fonts/Cuprum.css);
+/*
 @import url(http://fonts.googleapis.com/css?family=Galdeano);
 @import url(http://fonts.googleapis.com/css?family=Electrolize);
 @import url(http://fonts.googleapis.com/css?family=Cuprum);
-
+*/
 body{font-size:14px;font-family:"Galdeano","Hiragino Sans GB","Microsoft YaHei",Trebuchet,"Trebuchet MS",Tahoma,"Lucida Grande","Lucida Sans Unicode",Verdana,sans-serif;color:#000000;background-color:#ffffff;}
 *{padding:0;margin: 0;border:none;outline:none;}
 a{color:#dd0000;text-decoration:none;}
