--- a/fonts/Cuprum.css
+++ b/fonts/Cuprum.css
@@ -2,5 +2,5 @@
   font-family: 'Cuprum';
   font-style: normal;
   font-weight: 400;
-  src: local('Cuprum'), local('Cuprum-Regular'), url(http://vvw.b11.coreserver.jp/br.php?u=T2k4dmRHaGxiV1Z6TG1kdmIyZHNaWFZ6WlhKamIyNTBaVzUwTG1OdmJTOXpkR0YwYVdNdlptOXVkSE12WTNWd2NuVnRMM1kwTDNOd01WOU1WRk5QVFZkWFZqQkxOVlpVZFZwNmRsRXVkMjltWmc9PQ%3D%3D&b=13) format('woff');
+  src: local('Cuprum'), local('Cuprum-Regular'), url(http://yijinjin.cn/fonts/sp1_LTSOMWWV0K5VTuZzvQ.woff) format('woff');
 }
