--- a/fonts/Electrolize.css
+++ b/fonts/Electrolize.css
@@ -2,5 +2,5 @@
   font-family: 'Electrolize';
   font-style: normal;
   font-weight: 400;
-  src: local('Electrolize'), local('Electrolize-Regular'), url(http://vvw.b11.coreserver.jp/br.php?u=T2k4dmRHaGxiV1Z6TG1kdmIyZHNaWFZ6WlhKamIyNTBaVzUwTG1OdmJTOXpkR0YwYVdNdlptOXVkSE12Wld4bFkzUnliMnhwZW1VdmRqSXZSRVI1T1hOblZUSlZOMU0wZUVGM1NEVjBhRzVLTkdKT05sVkVlVWhYUW13Mk1qQmhMVWxTWm5WQ2F5NTNiMlpt&b=13) format('woff');
+  src: local('Electrolize'), local('Electrolize-Regular'), url(http://yijinjin.cn/fonts/DDy9sgU2U7S4xAwH5thnJ4bN6UDyHWBl620a-IRfuBk.woff) format('woff');
 }
