--- a/_includes/themes/sosimple/default.html
+++ b/_includes/themes/sosimple/default.html
@@ -23,6 +23,7 @@
         <span><a title="tags" class="" href="{{ site.url }}/Tags/">tags</a></span>
         <span><a title="favorate books" class="" href="{{ site.url }}/Books/">books</a></span>
 	<span><a title="resources" class="" href="{{ site.url }}/Resource/">resource</a></span>
+        <span><a title="tools" class="" href="{{ site.url }}/Tools/">tools</a></span>
         <span><a title="links" class="" href="{{ site.url }}/Links/">links</a></span>
         <span><a title="subscribe by RSS" class="" href="{{ site.url }}/Feed/">subscribe</a></span>
         </nav>
