--- a/_includes/themes/sosimple/default.html
+++ b/_includes/themes/sosimple/default.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.css">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/highlight.css">
     <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery-1.7.1.min.js"></script>
+    <link href="{{ ASSET_PATH }}/google-code-prettify/prettify.css" rel="stylesheet" type="text/css" media="all">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ ASSET_PATH }}/google-code-prettify/prettify.js"></script>
   </head>
   <body>
     <div id="container">
@@ -41,6 +44,11 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
+      !function ($) {
+      $(function(){
+      window.prettyPrint && prettyPrint();
+      });
+      }(window.jQuery);
     </script>
   </body>
 </html>
